--- a/css/style.css
+++ b/css/style.css
@@ -57,6 +57,7 @@ table {
 .fColor2, .accountInfo li i, .userIdBox aside i:hover, .guideLineNav a:hover, .guideLineQA a:hover, .guideLineQApage .guideLineQA .open a, .accountInfo + a[href="about-exp.html"] {
     color: #59a4ff;
 }
+.fColor3{color:#ff6c6c;}
 .fs14 {
     font-size: 14px;
 }
@@ -497,7 +498,6 @@ footer .logo-footer {
     left: 0;
     bottom: 0;
     z-index: 9000;
-    color: #e8e8e8;
     font-size: 14px;
     background: rgba(0, 0, 0, .8);
 }
@@ -538,6 +538,7 @@ footer .logo-footer {
 }
 .iptbox input {
     width: 70%;
+	line-height:normal;
     border: none;
 }
 .userIdBox {
@@ -601,6 +602,7 @@ footer .logo-footer {
     cursor: default;
     background: rgb(182, 184, 185);
 }
+a.fColor3[href="sign-up.html"]:hover{color:#fff;background:#ff6c6c;}
 /* 投哪指南+app下载 btnBar */
 .guide-DLApp {
     padding: 30px 0;
