--- a/css/style.css
+++ b/css/style.css
@@ -127,6 +127,7 @@ table {
     font-size: 16px;
     border: none;
     border-radius: 3px;
+    text-align: center;
     background: #59a4ff;
 }
 .btnBlueBig:hover, .idCodeBox .idCode:hover {
